# nlp_template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  contributing.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cfg/: .gitignore  config.yaml  config_ner.yaml  mnist_config.yaml  rte_config.yaml
cfg/augmentation/: augs2.yaml  basic_augs.yaml  basic_augs1.yaml
cfg/callbacks/: callbacks.yaml
cfg/datamodule/: debug_dataset.yaml  image_classification.yaml  mnist_image_classification.yaml  ner.yaml  rte_datamodule.yaml
cfg/inference/: basic.yaml  inference.yaml  test.yaml
cfg/logging/: comet_ml.yaml  loggers.yaml  wandb.yaml
cfg/loss/: bce_logits.yaml  cross_entropy.yaml  label_smoothing_loss.yaml
cfg/metric/: metric_manager.yaml
cfg/metrics/: accuracy.yaml  metric_manager.yaml
cfg/model/: bilstm_crf_simple.yaml  complex_model.yaml  efficientnet_model.yaml  roberta.yaml  ruroberta.yaml  simple_model.yaml
cfg/optimizer/: adabelief.yaml  adabound.yaml  adadelta.yaml  adafactor.yaml  adagrad.yaml  adam.yaml  adamax.yaml  adamw.yaml  adamw_two_lr.yaml  asgd.yaml  rangeradabelief.yaml  rmsprop.yaml  rprop.yaml  sgd.yaml
cfg/private/: comet_api.yaml  custom.yaml  default.yaml
cfg/scheduler/: LinearWarmupCosineAnnealingLR.yaml  PolynomialWarmupLR.yaml  cosine.yaml  cosinewarm.yaml  cyclic.yaml  exponential.yaml  lambda.yaml  step.yaml  (+5 more)
notebooks/: rte dataset.ipynb
src/: get_dataset.py  ml_utils.py  technical_utils.py  text_utils.py  utils.py
tests/: test_cfg.py  test_metrics.py  test_optimizers.py  test_schedulers.py
(+32 files in other folders)
