[tool.poetry]
name = "pl-template"
version = "0.1.0"
description = "General PyTorch Lightning pipeline for NN training"
authors = ["Nikita Baranov <nikita.v.baranov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
